--- a/staff.html
+++ b/staff.html
@@ -22,6 +22,9 @@
                 <button id="enableNotificationsBtn" class="btn btn-secondary" style="padding: 0.5rem 1rem; font-size: 0.875rem; margin-left: 0.5rem;">
                     🔔 تفعيل الإشعارات
                 </button>
+                <button id="testNotificationBtn" class="btn btn-secondary" style="padding: 0.5rem 1rem; font-size: 0.875rem; margin-left: 0.5rem;">
+                    🧪 اختبار الإشعارات
+                </button>
                 <button id="installAppBtn" class="btn btn-secondary" style="padding: 0.5rem 1rem; font-size: 0.875rem; margin-left: 0.5rem;">
                     📱 تثبيت التطبيق
                 </button>
