--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <div class="field-icon">⚽</div>
                         </div>
                         <div class="field-content">
-                            <h3 class="field-name">ملعب سفاري 1</h3>
+                            <h3 class="field-name">ملعب سفاري</h3>
                             <p class="field-description">ملعب عشب صناعي بمواصفات عالمية</p>
                             <ul class="field-features">
                                 <li>✓ إضاءة ليلية</li>
@@ -58,7 +58,7 @@
                             <div class="field-icon">⚽</div>
                         </div>
                         <div class="field-content">
-                            <h3 class="field-name">ملعب سفاري 2</h3>
+                            <h3 class="field-name">ملعب الكأس </h3>
                             <p class="field-description">ملعب عشب صناعي بمواصفات عالمية</p>
                             <ul class="field-features">
                                 <li>✓ إضاءة ليلية</li>
