--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <nav class="nav">
                 <a href="index.html" class="nav-link active">الرئيسية</a>
                 <a href="admin.html" class="nav-link">لوحة التحكم</a>
+                <a href="https://wa.me/966551710634" class="btn btn-primary" style="padding: 0.5rem 1rem; text-decoration: none;">📞 حجز واستفسار</a>
             </nav>
         </div>
     </header>
@@ -31,7 +32,7 @@
         <section class="fields-section">
             <div class="container">
                 <div class="fields-grid">
-                    <!-- ملعب سفاري 1 -->
+                    <!-- ملعب سفاري -->
                     <div class="field-card" data-field="Safari 1">
                         <div class="field-image">
                             <div class="field-badge">متاح</div>
@@ -51,19 +52,20 @@
                         </div>
                     </div>
 
-                    <!-- ملعب سفاري 2 -->
+                    <!-- ملعب الكأس -->
                     <div class="field-card" data-field="Safari 2">
                         <div class="field-image">
                             <div class="field-badge">متاح</div>
                             <div class="field-icon">⚽</div>
                         </div>
                         <div class="field-content">
-                            <h3 class="field-name">ملعب الكأس </h3>
+                            <h3 class="field-name">ملعب الكأس</h3>
                             <p class="field-description">ملعب عشب صناعي بمواصفات عالمية</p>
                             <ul class="field-features">
                                 <li>✓ إضاءة ليلية</li>
                                 <li>✓ غرف تبديل ملابس</li>
                                 <li>✓ مواقف سيارات</li>
+                                <li>✓ متاح للرجال والنساء</li>
                             </ul>
                             <button class="btn btn-primary book-btn" data-field="Safari 2">
                                 احجز الآن
@@ -134,7 +136,8 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; <span id="currentYear"></span> ملاعب سفاري - جميع الحقوق محفوظة</p>
+            <p>&copy; <span id="currentYear"></span>  جميع الحقوق محفوظة</p>
+            <p style="margin-top: 0.5rem;">تصميم وبرمجة النظام: <a href="https://moha750.github.io/M7_ALMATTAR" target="_blank" style="color: var(--primary-color); text-decoration: none;">محمد المطر</a> | <a href="https://wa.me/966554909663" target="_blank" style="color: var(--primary-color); text-decoration: none;">تواصل معي</a></p>
         </div>
     </footer>
 
