--- a/staff.html
+++ b/staff.html
@@ -117,6 +117,7 @@
     <footer class="footer">
         <div class="container">
             <p>&copy; <span id="currentYear"></span> ملاعب سفاري - جميع الحقوق محفوظة</p>
+            <p style="margin-top: 0.5rem;">تصميم وبرمجة النظام: <a href="https://mohammedalmatar.com" target="_blank" style="color: var(--primary-color); text-decoration: none;">محمد المطر</a> | <a href="https://wa.me/966551710634" target="_blank" style="color: var(--primary-color); text-decoration: none;">تواصل معي</a></p>
         </div>
     </footer>
 
