--- a/admin.html
+++ b/admin.html
@@ -117,8 +117,8 @@
                 <div class="bookings-filter-bar" style="display: none; margin-bottom: 1.5rem; display: flex; gap: 1rem; align-items: center;">
                     <select id="fieldFilter" class="filter-select">
                         <option value="all">جميع الملاعب</option>
-                        <option value="Safari 1">ملعب سفاري</option>
-                        <option value="Safari 2">ملعب الكأس</option>
+                        <option value="ملعب سفاري">ملعب سفاري</option>
+                        <option value="ملعب الكأس">ملعب الكأس</option>
                     </select>
                     <button id="refreshBtn" class="btn btn-secondary">
                         <span class="refresh-icon">↻</span> تحديث
