--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="container">
                 <div class="fields-grid">
                     <!-- ملعب سفاري -->
-                    <div class="field-card" data-field="Safari 1">
+                    <div class="field-card" data-field="ملعب سفاري">
                         <div class="field-image">
                             <div class="field-badge">متاح</div>
                             <div class="field-icon">⚽</div>
@@ -46,14 +46,14 @@
                                 <li>✓ غرف تبديل ملابس</li>
                                 <li>✓ مواقف سيارات</li>
                             </ul>
-                            <button class="btn btn-primary book-btn" data-field="Safari 1">
+                            <button class="btn btn-primary book-btn" data-field="ملعب سفاري">
                                 احجز الآن
                             </button>
                         </div>
                     </div>
 
                     <!-- ملعب الكأس -->
-                    <div class="field-card" data-field="Safari 2">
+                    <div class="field-card" data-field="ملعب الكأس">
                         <div class="field-image">
                             <div class="field-badge">متاح</div>
                             <div class="field-icon">⚽</div>
@@ -67,7 +67,7 @@
                                 <li>✓ مواقف سيارات</li>
                                 <li>✓ متاح للرجال والنساء</li>
                             </ul>
-                            <button class="btn btn-primary book-btn" data-field="Safari 2">
+                            <button class="btn btn-primary book-btn" data-field="ملعب الكأس">
                                 احجز الآن
                             </button>
                         </div>
