--- a/staff.html
+++ b/staff.html
@@ -42,8 +42,8 @@
                 <div class="filter-controls">
                     <select id="fieldFilter" class="filter-select">
                         <option value="all">جميع الملاعب</option>
-                        <option value="Safari 1">ملعب سفاري</option>
-                        <option value="Safari 2">ملعب الكأس</option>
+                        <option value="ملعب سفاري">ملعب سفاري</option>
+                        <option value="ملعب الكأس">ملعب الكأس</option>
                     </select>
                     <select id="dateFilter" class="filter-select">
                         <option value="all">جميع التواريخ</option>
