--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="header">
         <div class="container">
             <div class="logo">
-                <h1>⚽ ملاعب سفاري</h1>
+                <h1>⚽ ملاعب سفاري والكأس ⚽</h1>
                 <p>احجز ملعبك بسهولة</p>
             </div>
             <nav class="nav">
